# fetch_scripts

./: canvas.py  disco.py  draw.py  jacobian.py  package.xml  paths.py  traj.py
launch/: fetch_with_movit.launch
scripts/: draw.py  fetch.m  jacobian.py  jacobian_stephen.py  mainplanner.py
